compiler-core/src/parse/snapshots/rakun_core__parse__tests__missing_type_constructor_arguments_in_type_annotation_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() {\n  let a: Int() = todo\n}"
---
----- SOURCE CODE
pub fn main() {
  let a: Int() = todo
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:7
  │
2 │   let a: Int() = todo
  │       ^ I was expecting a '=' after this
