compiler-core/src/parse/snapshots/rakun_core__parse__tests__missing_type_constructor_arguments_in_type_definition.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type A() {\n  A(Int)\n}\n"
---
----- SOURCE CODE

pub type A() {
  A(Int)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:11
  │
2 │ pub type A() {
  │           ^ I was not expecting this

Found `(`, expected one of: 
- An import, const, type, or function.
