compiler-core/src/parse/snapshots/rakun_core__parse__tests__multiple_deprecation_attributes.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@deprecated(\"1\")\n@deprecated(\"2\")\npub fn main() -> Nil {\n  Nil\n}\n"
---
----- SOURCE CODE

@deprecated("1")
@deprecated("2")
pub fn main() -> Nil {
  Nil
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:1
  │
3 │ @deprecated("2")
  │ ^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.
