compiler-core/src/parse/snapshots/rakun_core__parse__tests__multiple_external_for_same_project_erlang.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erlang, \"one\", \"two\")\n@external(erlang, \"three\", \"four\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:1
  │
3 │ @external(erlang, "three", "four")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.
