compiler-core/src/parse/snapshots/rakun_core__parse__tests__no_eq_after_binding_snapshot_1.snap
---
source: compiler-core/src/parse/tests.rs
expression: let wibble
---
error: Syntax error
  ┌─ /src/parse/error.rakun:1:5
  │
1 │ let wibble
  │     ^^^^^^ I was expecting a '=' after this
