compiler-core/src/parse/snapshots/rakun_core__parse__tests__no_let_binding_snapshot_1.snap
---
source: compiler-core/src/parse/tests.rs
expression: wibble = 4
---
error: Syntax error
  ┌─ /src/parse/error.rakun:1:8
  │
1 │ wibble = 4
  │        ^ There must be a 'let' to bind variable to value

Hint: Use let for binding.
See: https://tour.rakun.run/basics/assignments/
