compiler-core/src/parse/snapshots/rakun_core__parse__tests__no_let_binding_snapshot_3.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let wobble:Int = 32\n        wobble = 42"
---
----- SOURCE CODE
let wobble:Int = 32
        wobble = 42

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:16
  │
2 │         wobble = 42
  │                ^ There must be a 'let' to bind variable to value

Hint: Use let for binding.
See: https://tour.rakun.run/basics/assignments/
